2005-03-29  Alp Toker  <alp@atoker.com>

	* DockPaned.cs: make the central pane resize rather than the edge
	panes

2005-03-24  John Luke  <john.luke@gmail.com>

	* DockLayout.cs (UpdateItemsModel): reduce chances of being stuck
	endlessly in the loop, thanks to toshok for pointing me to it

2005-03-17  John Luke  <john.luke@gmail.com>

	* Dock.cs:
	* DockItem.cs:
	* DockItemGrip.cs: clean up SizeRequest and SizeAllocate
	fixes one of our resizing bugs

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockBar.cs:
	* DockBarButton.cs: simplify by just using the
	Clicked signal

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockItemBehavior.cs: add NoGrip flag
	* DockItem.cs:
	* DockItemGrip.cs: hide/show the DockItemGrip based
	on NoGrip flag, not Locked status and update for that

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockItem.cs: add comment about saving position
	* DockPaned.cs: override OnChildPlacement

2005-03-15  Lluis Sanchez Gual <lluis@novell.com>

	* DockItemGrip.cs: Redraw the grip if the title or the icon changes.
	Added some padding between the icon and the label.

2005-03-14  Lluis Sanchez Gual <lluis@novell.com>

	* DockItem.cs: Added property for getting the default position.

2005-03-13  Todd Berman  <tberman@off.net>

	* DockPlaceholder.cs: Use Conditional instead of #if

2005-03-13  John Luke  <john.luke@gmail.com>

	* DockNotebook.cs: not Automatic
	* DockPlaceholder.cs: port detach_cb and dock_cb
	is Automatic
	use Stack instead of ArrayList
	* DockMaster.cs: restore IsAutomatic code
	* DockItem.cs: not Automatic
	* DockObject.cs: small null check fix

2005-03-13  John Luke  <john.luke@gmail.com>

	* DockPaned.cs: fix little orientaion bug when
	loading the layout

2005-03-12  Todd Berman  <tberman@off.net>

	* DockItemGrip.cs: use .SetMarkup, not .SetText

2005-03-13  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItemGrip.cs, DockMaster.cs: Fix potential memory leaks.

2005-02-28  John Luke  <john.luke@gmail.com>
